# aiskills

./: .gitignore  CLAUDE.md
aisoftdev/: skills-lock.json
aisoftdev/agents/: backend.md  director.md  frontend.md  qa.md
aisoftdev/memory/: architecture.md  decisions.md
aisoftdev/scripts/: spawn-agents.sh
aisoftdev/skills/coding/: implement-api.md  refactor-code.md  write-tests.md
aisoftdev/skills/devops/: deploy-service.md  write-dockerfile.md
aisoftdev/skills/research/: research-library.md  summarize-docs.md
aisoftdev/skills/review/: code-review.md  security-review.md
aisoftdev/tasks/: queue.json
jobhunt/: .gitignore  config.example.json  make_resume.py  process_queue.py  pyproject.toml  run_resume.py
jobhunt/.claude-plugin/: plugin.json
jobhunt/scraper/: ats.py  linkedin.py  scorer.py  seen_jobs.json
jobhunt/scripts/: apply.py  fetch_queue.py  make_resume_azure_storage.py  make_resume_msft.py  process_queue.py  run_resume.py
jobhunt/scripts/lib/: ats.py
jobhunt/skills/find-hiring-manager/: SKILL.md
jobhunt/skills/job-search/: SKILL.md
jobhunt/skills/make-cover-letter/: SKILL.md
jobhunt/skills/make-resume/: SKILL.md
jobhunt/skills/reachout/: SKILL.md
playwright_lib/: pyproject.toml
playwright_lib/playwright_lib/: __init__.py  manager.py  result.py
playwright_lib/playwright_lib/form_fillers/: __init__.py  browser_use.py
playwright_lib/playwright_lib/interfaces/: __init__.py  form_filler.py  scraper.py
playwright_lib/playwright_lib/pages/: __init__.py  base.py  linkedin.py
playwright_lib/playwright_lib/scrapers/: __init__.py  (+1 more)
(+3 files in other folders)
