[project]
name = "jobhunt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright_lib @ ../playwright_lib",
    "browser-use>=0.12.1",
    "langchain-anthropic>=0.3.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.2.1",
]
